Add YouTube recording support and improve video handling
  - Added recording capability with 'C' key (saves to outputs/)
  - Fixed YouTube download using yt-dlp (replaced broken pytube)
  - Added visual recording indicator (red dot in top-right)
  - Videos now saved to local videos/ folder
  - Fixed save frame functionality (S key)
  - Video pauses at end instead of closing
  - Updated README with detailed project description
  - Updated requirements.txt with correct dependencies
  - Added .gitignore to exclude virtual environment and temp files

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,7 +13,7 @@ detection:
 input:
   source: "youtube" # Default input source (webcam/youtube/file)
   webcam_id: 0 # Webcam device ID
-  youtube_url: "https://www.youtube.com/watch?v=L_Guz73e6fw" # YouTube video URL
+  youtube_url: "https://youtu.be/Y1jTEyb3wiI" # YouTube video URL
   video_file: "" # Local video file path
   resolution: [1280, 720] # Input resolution [width, height]
   fps: 30 # Target frame rate
