Add comprehensive project documentation and Docker setup for YOLO Real-time Object Detection
- Created project plan detailing objectives, architecture, development phases, and success metrics.
- Added quick start guide for running YOLO with Docker, including three methods: Makefile, helper scripts, and Docker Compose.
- Developed detailed README for Docker setup, covering prerequisites, installation, usage, configuration, troubleshooting, and performance.
- Implemented CPU and GPU Docker run scripts for streamlined execution.
- Established a clear directory structure for configuration, models, videos, outputs, and logs.
- Included error handling and troubleshooting tips for common issues.
- Enhanced user experience with controls and performance expectations.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,10 +11,10 @@ detection:
   half_precision: true # Use FP16 for faster inference
 
 input:
-  source: "youtube" # Default input source (webcam/youtube/file)
+  source: "youtube" # Default input source (webcam/youtube/video_file)
   webcam_id: 0 # Webcam device ID
-  youtube_url: "https://youtu.be/Y1jTEyb3wiI" # YouTube video URL
-  video_file: "" # Local video file path
+  youtube_url: "https://www.youtube.com/watch?v=MNn9qKG2UFI" # YouTube video URL (sample traffic video)
+  video_file: "image.jpg" # Local video file path (can also be an image)
   resolution: [1280, 720] # Input resolution [width, height]
   fps: 30 # Target frame rate
 
@@ -23,7 +23,7 @@ display:
   show_confidence: true # Show confidence scores
   box_thickness: 2 # Bounding box line thickness
   font_scale: 0.6 # Text font size
-  save_detections: false # Save detection results
+  save_detections: true # Save detection results
   output_dir: "outputs" # Output directory for saved results
 
 logging:
