--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,25 @@
-# YOLO Real-time Object Detection Requirements
-# Python 3.8+ (3.12 recommended)
+# Core dependencies for YOLO Real-time Object Detection
+# PyTorch is installed separately with CUDA/CPU support
 
-# Core deep learning framework with CUDA support
-# Note: Install PyTorch separately using the command below for GPU support:
-# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
-torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
+# Computer Vision
+opencv-python==4.8.1.78
+opencv-python-headless==4.8.1.78
 
-# Computer vision and image processing
-opencv-python>=4.5.0
+# YOLO and Deep Learning
+ultralytics==8.0.200
 
-# Numerical computing
-numpy>=1.21.0,<2.0.0
+# Data Processing
+numpy==1.24.3
+pillow==10.1.0
 
-# YOLO model framework
-ultralytics>=8.3.0
+# Configuration Management
+pyyaml==6.0.1
 
-# YouTube video downloading (replaces pytube which is deprecated)
-yt-dlp>=2023.3.0
+# Visualization
+matplotlib==3.8.0
 
-# Configuration management
-PyYAML>=6.0
+# YouTube Video Downloader
+yt-dlp==2023.10.13
 
-# Visualization and image handling
-matplotlib>=3.5.0
-Pillow>=8.3.0
-
-# HTTP requests (for downloading content)
-requests>=2.28.0
-
-# Scientific computing (required by ultralytics)
-scipy>=1.4.1
-
-# Data processing (required by ultralytics)
-psutil>=5.9.0
-
-# Additional dependencies for ultralytics
-polars>=1.0.0
-
-# Optional development dependencies
-# Uncomment for development use
-# jupyter>=1.0.0
-# tqdm>=4.64.0
-# pytest>=7.0.0
-# black>=22.0.0
-# flake8>=4.0.0
-# mypy>=0.950
+# Utilities
+tqdm==4.66.1
